[gd_scene load_steps=2 format=3 uid="uid://b1f5g4tgmccv3"]

[ext_resource type="Script" path="res://screens/register/registerscreen.gd" id="1_kl14v"]

[node name="registerscreen" type="MarginContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_right = 32
script = ExtResource("1_kl14v")

[node name="vbox" type="VBoxContainer" parent="."]
layout_mode = 2
theme_override_constants/separation = 16

[node name="logo" type="Label" parent="vbox"]
layout_mode = 2
size_flags_vertical = 6
text = "CookA	id"
horizontal_alignment = 1
vertical_alignment = 1

[node name="registration_form" type="VBoxContainer" parent="vbox"]
layout_mode = 2
size_flags_vertical = 0
size_flags_stretch_ratio = 2.0
theme_override_constants/separation = 32

[node name="email_input" type="LineEdit" parent="vbox/registration_form"]
layout_mode = 2
placeholder_text = "email address"

[node name="password_input" type="LineEdit" parent="vbox/registration_form"]
layout_mode = 2
placeholder_text = "password"
secret = true

[node name="submit" type="Button" parent="vbox/registration_form"]
layout_mode = 2
text = "Register"

[node name="separator" type="HSeparator" parent="vbox"]
layout_mode = 2
theme_override_constants/separation = 32

[node name="hbox" type="HBoxContainer" parent="vbox"]
layout_mode = 2
size_flags_vertical = 2
alignment = 1

[node name="already_joined" type="Label" parent="vbox/hbox"]
layout_mode = 2
text = "Already joined?"

[node name="login_link" type="Button" parent="vbox/hbox"]
layout_mode = 2
mouse_default_cursor_shape = 2
text = "Login here!"
flat = true

[node name="register_request" type="HTTPRequest" parent="."]

[connection signal="button_up" from="vbox/registration_form/submit" to="." method="_on_submit_button_up"]
[connection signal="button_up" from="vbox/hbox/login_link" to="." method="_on_login_link_button_up"]
